--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-   "allowJs": false,
+    "allowJs": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "ES5",
@@ -12,17 +12,18 @@
     "typings/index.d.ts",
     ".api/v1.4.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
+    "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-chartutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
-    "src/dataInterfaces.ts",
-    "src/settings.ts",
-    "src/columns.ts",
-    "src/visualLayout.ts",
-    "src/behavior.ts",
+    "src/properties.ts",
+    "src/animator.ts",
+    "src/helpers.ts",
+    "src/utils.ts",
+    "src/webBehavior.ts",
     "src/visual.ts"
   ]
 }
