--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
     "experimentalDecorators": true,
     "target": "ES5",
     "sourceMap": true,
+    "sourceRoot": "../../src/",
     "out": "./.tmp/build/visual.js",
     "declaration": true
   },
   "files": [
-    "typings/index.d.ts",
-    ".api/v1.4.0/PowerBI-visuals.d.ts",
+    ".api/v1.6.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.d.ts",
