--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "pbicvsupport@microsoft.com"
   },
   "scripts": {
-    "postinstall": "typings install && pbiviz update 1.6.0",
+    "postinstall": "pbiviz update 1.5.0",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
@@ -37,7 +37,7 @@
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "1.6.1",
+    "powerbi-visuals-tools": "1.5.0",
     "powerbi-visuals-utils-testutils": "0.2.2",
     "tslint": "4.5.1",
     "tslint-microsoft-contrib": "4.0.1",
