--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "declaration": true
   },
   "files": [
-    ".api/v1.6.0/PowerBI-visuals.d.ts",
+    ".api/v1.5.0/PowerBI-visuals.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.d.ts",
@@ -19,11 +19,13 @@
     "node_modules/powerbi-visuals-utils-chartutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
-    "src/properties.ts",
     "src/animator.ts",
     "src/helpers.ts",
     "src/utils.ts",
     "src/webBehavior.ts",
-    "src/visual.ts"
+    "src/visual.ts",
+    "src/settings.ts",
+    "src/enum/enums.ts",
+    "src/models/models.ts"
   ]
 }
