--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,14 @@
+; http://editorconfig.org
+
 root = true
 
 [*]
-end_of_line = lf
 charset = utf-8
 indent_style = space
 indent_size = 4
+end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
