--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "pbicvsupport@microsoft.com"
   },
   "scripts": {
-    "postinstall": "pbiviz update 1.6.0",
+    "postinstall": "pbiviz update 1.7.0",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
@@ -23,9 +23,9 @@
     "url": "git+https://github.com/Microsoft/PowerBI-visuals-pulsechart.git"
   },
   "devDependencies": {
-    "@types/d3": "3.5.36",
-    "@types/jasmine": "2.5.47",
-    "@types/jasmine-jquery": "1.5.30",
+    "@types/d3": "3.5.38",
+    "@types/jasmine": "^2.5.53",
+    "@types/jasmine-jquery": "^1.5.31",
     "@types/jquery": "2.0.45",
     "@types/lodash": "4.14.55",
     "coveralls": "2.13.1",
@@ -33,31 +33,31 @@
     "jasmine-jquery": "2.1.1",
     "jquery": "3.2.1",
     "karma": "1.7.0",
-    "karma-chrome-launcher": "2.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.1.0",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "1.6.4",
-    "powerbi-visuals-utils-testutils": "1.0.0",
-    "stylelint": "7.10.1",
-    "tslint": "5.3.2",
-    "tslint-microsoft-contrib": "5.0.0",
-    "typescript": "2.3.3"
+    "powerbi-visuals-tools": "^1.7.1",
+    "powerbi-visuals-utils-testutils": "^1.0.1",
+    "stylelint": "^7.12.0",
+    "tslint": "^5.5.0",
+    "tslint-microsoft-contrib": "^5.0.1",
+    "typescript": "^2.1.4"
   },
   "dependencies": {
-    "jquery": "3.2.1",
     "d3": "3.5.5",
     "globalize": "0.1.0-a2",
+    "jquery": "3.2.1",
     "lodash": "4.17.4",
-    "powerbi-visuals-utils-typeutils": "1.0.0",
-    "powerbi-visuals-utils-svgutils": "1.0.0",
-    "powerbi-visuals-utils-chartutils": "0.3.0",
-    "powerbi-visuals-utils-colorutils": "0.2.2",
-    "powerbi-visuals-utils-dataviewutils": "1.1.1",
-    "powerbi-visuals-utils-tooltiputils": "0.3.2",
-    "powerbi-visuals-utils-formattingutils": "1.0.0",
-    "powerbi-visuals-utils-interactivityutils": "0.3.1"
+    "powerbi-visuals-utils-chartutils": "^1.2.0",
+    "powerbi-visuals-utils-colorutils": "^1.0.0",
+    "powerbi-visuals-utils-dataviewutils": "^1.2.0",
+    "powerbi-visuals-utils-formattingutils": "^2.1.0",
+    "powerbi-visuals-utils-interactivityutils": "^1.0.0",
+    "powerbi-visuals-utils-svgutils": "^1.1.0",
+    "powerbi-visuals-utils-tooltiputils": "^1.0.0",
+    "powerbi-visuals-utils-typeutils": "^1.1.0"
   }
 }
