--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "declaration": true
   },
   "files": [
-    ".api/v1.7.0/PowerBI-visuals.d.ts",
+    ".api/v1.11.0/PowerBI-visuals.d.ts",
+    "node_modules/powerbi-models/dist/models-noexports.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.d.ts",
