--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
-    "powerbi-visuals-tools": "^1.11.0",
-    "powerbi-visuals-utils-testutils": "^1.0.1",
+    "powerbi-visuals-tools": "1.11.2",
+    "powerbi-visuals-utils-testutils": "1.2.1",
     "stylelint": "^7.12.0",
     "tslint": "^5.5.0",
     "tslint-microsoft-contrib": "^5.0.1",
@@ -55,7 +55,7 @@
     "powerbi-visuals-utils-chartutils": "^1.2.0",
     "powerbi-visuals-utils-colorutils": "^1.0.0",
     "powerbi-visuals-utils-dataviewutils": "^1.2.0",
-    "powerbi-visuals-utils-formattingutils": "^2.1.0",
+    "powerbi-visuals-utils-formattingutils": "^3.0.1",
     "powerbi-visuals-utils-interactivityutils": "^3.0.1",
     "powerbi-visuals-utils-svgutils": "^1.1.0",
     "powerbi-visuals-utils-tooltiputils": "^1.0.0",
