--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,29 +3,22 @@
     "allowJs": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "ES5",
+    "module": "es6",
+    "target": "es6",
     "sourceMap": true,
-    "out": "./.tmp/build/visual.js",
-    "declaration": true
+    "outDir": "./.tmp/build/",
+    "sourceRoot": "../../src/",
+    "moduleResolution": "node",
+    "declaration": true,
+    "lib": [
+      "es2015",
+      "dom"
+    ]
   },
   "files": [
-    ".api/v2.1.0/PowerBI-visuals.d.ts",
-    "node_modules/powerbi-models/dist/models-noexports.d.ts",
-    "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-colorutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-interactivityutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-chartutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
-    "src/animator.ts",
-    "src/helpers.ts",
-    "src/utils.ts",
-    "src/webBehavior.ts",
-    "src/visual.ts",
-    "src/settings.ts",
-    "src/enum/enums.ts",
-    "src/models/models.ts"
+    "./test/visualTest.ts"
+  ],
+  "include": [
+    "src/*.ts"
   ]
 }
