--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "email": "pbicvsupport@microsoft.com"
   },
   "scripts": {
-    "postinstall": "pbiviz update 2.1.0",
     "pbiviz": "pbiviz",
     "start": "pbiviz start",
     "package": "pbiviz package",
@@ -44,8 +43,8 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.1",
     "karma-webpack": "3.0.0",
-    "less": "2.1.1",
-    "less-loader": "4.1.0",
+    "less": "^2.1.1",
+    "less-loader": "^4.1.0",
     "powerbi-visuals-api": "^2.1.0",
     "powerbi-visuals-tools": "3.0.1",
     "powerbi-visuals-utils-testutils": "^2.0.4",
@@ -61,6 +60,7 @@
   "dependencies": {
     "d3": "3.5.5",
     "jquery": "3.2.1",
+    "jsonschema": "^1.2.4",
     "lodash": "4.17.4",
     "powerbi-models": "^1.0.8",
     "powerbi-visuals-utils-chartutils": "2.0.7",
