--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,21 +4,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "module": "es6",
-    "target": "es6",
+    "target": "ES6",
     "sourceMap": true,
     "outDir": "./.tmp/build/",
-    "sourceRoot": "../../src/",
     "moduleResolution": "node",
-    "declaration": true,
-    "lib": [
-      "es2015",
-      "dom"
-    ]
+    "declaration": true
   },
   "files": [
-    "./test/visualTest.ts"
-  ],
-  "include": [
-    "src/*.ts"
+    "./src/visual.ts"
   ]
 }
