--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     ".tmp": true
   },
   "files.exclude": {
-    ".tmp": false,
+    ".tmp": true,
     "coverage": true
   },
   "search.exclude": {
