--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,9 @@
     "ignoreFiles": [
         "./vendor/**/*"
     ],
+      "plugins": [
+    "stylelint-suitcss"
+    ],
     "rules": {
         "color-hex-case": "lower",
         "color-hex-length": "long",
@@ -20,7 +23,7 @@
         "function-name-case": "lower",
         "function-parentheses-newline-inside": null,
         "function-parentheses-space-inside": "never",
-        "function-url-data-uris": null,
+        "function-url-scheme-blacklist": null,
         "function-whitelist": null,
         "function-whitespace-after": "always",
         "number-leading-zero": "always",
@@ -28,7 +31,7 @@
         "number-no-trailing-zeros": true,
         "string-no-newline": true,
         "string-quotes": "double",
-        "time-no-imperceptible": null,
+        "time-min-milliseconds": 100,
         "unit-blacklist": null,
         "unit-case": "lower",
         "unit-no-unknown": true,
@@ -74,11 +77,11 @@
         "selector-id-pattern": null,
         "selector-max-compound-selectors": 4,
         "selector-max-specificity": null,
-        "selector-no-attribute": null,
-        "selector-no-combinator": null,
-        "selector-no-id": null,
-        "selector-no-type": null,
-        "selector-no-universal": null,
+        "selector-max-attribute": 0,
+        "selector-max-combinators": 4,
+        "selector-max-id": 0,
+        "selector-max-type": 2,
+        "selector-max-universal": 0,
         "selector-no-vendor-prefix": null,
         "selector-pseudo-class-case": "lower",
         "selector-pseudo-class-no-unknown": true,
@@ -86,7 +89,7 @@
         "selector-pseudo-element-case": "lower",
         "selector-pseudo-element-colon-notation": "double",
         "selector-pseudo-element-no-unknown": true,
-        "selector-root-no-composition": null,
+        "suitcss/selector-root-no-composition": null,
         "selector-type-case": "lower",
         "selector-type-no-unknown": true,
         "selector-max-empty-lines": 0,
@@ -94,7 +97,7 @@
         "selector-list-comma-newline-before": "never-multi-line",
         "selector-list-comma-space-after": "always-single-line",
         "selector-list-comma-space-before": "never",
-        "root-no-standard-properties": null,
+        "suitcss/root-no-standard-properties": null,
         "rule-empty-line-before": [
             "always",
             {
@@ -150,9 +153,7 @@
         "no-duplicate-selectors": true,
         "no-eol-whitespace": true,
         "no-extra-semicolons": true,
-        "no-indistinguishable-colors": null,
         "no-invalid-double-slash-comments": true,
-        "no-unknown-animations": null,
-        "no-unsupported-browser-features": null
+        "no-unknown-animations": null
     }
 }
