--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "puppeteer": "^1.6.1",
     "style-loader": "0.23.1",
     "stylelint": "^9.6.0",
+    "stylelint-suitcss": "^3.0.0",
     "ts-loader": "5.2.2",
     "ts-node": "^7.0.0",
     "tslint": "5.11.0",
@@ -65,12 +66,12 @@
     "jquery": "3.3.1",
     "lodash": "4.17.11",
     "powerbi-models": "^1.0.8",
-    "powerbi-visuals-utils-chartutils": "2.0.7",
+    "powerbi-visuals-utils-chartutils": "2.1.0",
     "powerbi-visuals-utils-colorutils": "2.0.2",
-    "powerbi-visuals-utils-dataviewutils": "2.0.1",
+    "powerbi-visuals-utils-dataviewutils": "2.1.0",
     "powerbi-visuals-utils-formattingutils": "4.0.2",
-    "powerbi-visuals-utils-interactivityutils": "^5.0.1",
-    "powerbi-visuals-utils-svgutils": "2.0.2",
+    "powerbi-visuals-utils-interactivityutils": "^5.1.0",
+    "powerbi-visuals-utils-svgutils": "^2.1.0",
     "powerbi-visuals-utils-tooltiputils": "2.0.3",
     "powerbi-visuals-utils-typeutils": "2.0.1"
   }
