--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "webpack": "4.23.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "core-js": "^3.1.4",
     "d3": "^5.4.0",
     "jquery": "3.3.1",
     "lodash": "4.17.11",
