--- a/package.json
+++ b/package.json
@@ -25,7 +25,15 @@
     "url": "git+https://github.com/Microsoft/PowerBI-visuals-pulsechart.git"
   },
   "devDependencies": {
-    "@types/d3": "^5.0.0",
+    "@types/d3-array": "^3.0.2",
+    "@types/d3-axis": "^3.0.1",
+    "@types/d3-ease": "^3.0.0",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-selection": "^3.0.2",
+    "@types/d3-shape": "^3.0.2",
+    "@types/d3-time": "^3.0.0",
+    "@types/d3-timer": "^3.0.0",
+    "@types/d3-transition": "^3.0.1",
     "@types/jasmine": "^2.5.53",
     "@types/jasmine-jquery": "^1.5.31",
     "@types/jquery": "3.3.22",
@@ -64,7 +72,15 @@
     "webpack": "4.23.1"
   },
   "dependencies": {
-    "d3": "^5.4.0",
+    "d3-array": "^3.1.1",
+    "d3-axis": "^3.0.0",
+    "d3-ease": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.0.1",
+    "d3-time": "^3.0.0",
+    "d3-timer": "^3.0.1",
+    "d3-transition": "^3.0.1",
     "jquery": "3.3.1",
     "lodash": "4.17.11",
     "powerbi-models": "^1.0.8",
@@ -76,6 +92,7 @@
     "powerbi-visuals-utils-svgutils": "^2.1.0",
     "powerbi-visuals-utils-tooltiputils": "2.1.3",
     "powerbi-visuals-utils-typeutils": "2.1.0",
+    "regenerator-runtime": "^0.13.9",
     "snyk": "^1.189.0"
   },
   "snyk": true
