--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/jasmine-jquery": "^1.5.31",
     "@types/jquery": "3.3.22",
     "@types/karma": "3.0.0",
-    "@types/lodash": "4.14.117",
+    "@types/lodash-es": "^4.17.5",
     "@types/webpack": "4.4.17",
     "coveralls": "3.0.2",
     "css-loader": "1.0.0",
@@ -82,7 +82,7 @@
     "d3-timer": "^3.0.1",
     "d3-transition": "^3.0.1",
     "jquery": "3.3.1",
-    "lodash": "4.17.11",
+    "lodash-es": "^4.17.21",
     "powerbi-models": "^1.0.8",
     "powerbi-visuals-utils-chartutils": "2.1.0",
     "powerbi-visuals-utils-colorutils": "2.1.0",
