Migrate from tslint to eslint, fix eslint errors

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "start": "pbiviz start",
     "package": "pbiviz package",
     "cert": "pbiviz --create-cert",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
-    "lint:ts": "node node_modules/tslint/bin/tslint \"+(src|test)/**/*.ts\"",
-    "lint:less": "stylelint -s less \"style/**/*.less\"",
+    "eslint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "pretest": "pbiviz package --resources --no-minify --no-pbiviz --no-plugin",
     "test": "karma start",
     "snyk-protect": "snyk protect",
@@ -37,8 +35,12 @@
     "@types/jasmine": "^3.10.2",
     "@types/lodash-es": "^4.17.5",
     "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "coveralls": "^3.1.1",
     "css-loader": "^6.5.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-powerbi-visuals": "^0.8.1",
     "jasmine": "3.10.0",
     "karma": "^6.3.16",
     "karma-chrome-launcher": "^3.1.0",
@@ -55,12 +57,8 @@
     "powerbi-visuals-utils-testutils": "^2.6.0",
     "puppeteer": "^13.3.2",
     "style-loader": "^3.3.1",
-    "stylelint": "^13.13.1",
-    "stylelint-suitcss": "^4.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "tslint": "^6.1.2",
-    "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^4.5.4",
     "webpack": "5.65.0"
   },
